.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tivoku-web
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tivoku-web
  template:
    metadata:
      labels:
        app: tivoku-web
    spec:
      containers:
        - name: tivoku-web
          image: ghcr.io/niro58/tivoku-web:6d2acf6447a1a4d71f33a14bdfdb9c828bb64915
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /api/ping
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 60
          resources:
            requests:
              cpu: 250m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
