.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tivoku-web-service
  namespace: personal
spec:
  selector:
    app: tivoku-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
