.k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tivoku-web
  namespace: personal
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`tivoku.com`) || Host(`www.tivoku.com`)
      kind: Rule
      middlewares:
        - name: gzip-compress
          namespace: kube-system
      services:
        - name: tivoku-web-service
          port: 80
  tls:
    certResolver: myresolver
